Fix accordion default spacing

--- a/scss/base/variables/_seo-accordion.scss
+++ b/scss/base/variables/_seo-accordion.scss
@@ -10,5 +10,5 @@ $seo-accordion-title-color:             $body-color;
 $seo-accordion-title-color-hover:       $gray-light;
 $seo-accordion-icon-size:               to-rem(22px);
 $seo-accordion-icon-color-hover:        $gray-light;
-$seo-accordion-content-spacing:         'spacing-scale-6';
+$seo-accordion-content-spacing:         'spacing-equal-3';
 $seo-accordion-transition:              transform 150ms ease-in, color 300ms ease;
